# athena-auth

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  openapi.yaml  schema.sql
.github/: PROJECT_SUMMARY.md
examples/: api_usage.sh
src/: main.rs
src/handlers/: api_keys.rs  auth.rs  mod.rs
src/middleware/: auth.rs
src/models/: api_key.rs  auth.rs  mod.rs  user.rs
src/utils/: api_key_gen.rs  jwt.rs  mod.rs
static/admin/: app.js  index.html  style.css
