[package]
name = "athena-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
athena_rs = "0.82.2"
axum = { version = "0.8.8", features = ["macros"] }
bcrypt = "0.18.0"
chrono = "0.4.44"
dotenv = "0.15.0"
jsonwebtoken = "10.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
